# FTMI

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-MIT  Makefile  README.md  test_input.txt
.github/workflows/: publish.yml  release.yml
src/: lib.rs  main.rs  path_extraction.rs  prefix_finder.rs  rename_db.rs
src/subcommands/: detect_all.rs  extract_paths.rs  find_delimited.rs  find_specific.rs  mod.rs  remove_prefix.rs  rename.rs
tests/: integration_tests.rs
