[package]
name = "ftmi"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust-based file renaming utility"
repository = "https://github.com/ben-haware/FTMI"
license-file = "LICENSE"
readme = "README.md"
keywords = ["file", "rename", "utility", "cli"]
categories = ["command-line-utilities"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ binary-ext }"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "bin"

[lib]
name = "ftmi"
path = "src/lib.rs"

[[bin]]
name = "ftmi"
path = "src/main.rs"

[[bin]]
name = "interactive-rename"
path = "src/bin/interactive-rename.rs"

[dependencies]
regex = "1.10"
atty = "0.2"

[dev-dependencies]
tempfile = "3.8"
