[package]
name = "ftmi"
version = "0.2.8"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Rust-based file renaming utility"
repository = "https://github.com/ben-haware/FTMI"
license-file = "LICENSE"
readme = "README.md"
keywords = ["file", "rename", "utility", "cli"]
categories = ["command-line-utilities"]
default-run = "ftmi"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }{ binary-ext }"
pkg-fmt = "bin"

[lib]
name = "ftmi"
path = "src/lib.rs"

[[bin]]
name = "ftmi"
path = "src/main.rs"

[dependencies]
regex = "1.10"
atty = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3.8"
